# polyglot-programming-playground

./: .hgignore  LICENSE.txt  Makefile  README.md
Churrascaria_Name_Generator_in_Go/: README.md  main.go
Comics_in_HTML/: README.md
Comics_in_HTML/Experiment_01/: comics.css  test.html
Comics_in_HTML/Experiment_02/: comics.css  test.html
Comics_in_HTML/Komika_Web_Fonts/: KomikaFontsLicense.txt  _komika_fonts_sample.html  komika_axis.css  komika_axis.eot  komika_axis.html  komika_boo.css  komika_boo.eot  komika_boo.html  komika_boogie.css  komika_boogie.eot  komika_boogie.html  komika_boss.css  komika_boss.eot  komika_boss.html  komika_glaze.css  komika_glaze.eot  komika_glaze.html  komika_hand.css  komika_hand.eot  komika_hand.html  komika_hand_bold.eot  komika_hand_bold.html  komika_hand_bold_italic.eot  komika_jam.css  (+69 more)
Continuous_Terrain_Generation_in_D/: Makefile
Fun_Gamey_Utils_in_Nim/: README.md  error.nim
Hex_Grid_in_Rust/: Cargo.toml  README.md
Hex_Grids_in_Breadth_in_Rust/: Cargo.toml  README.md
Hex_Grids_in_Rust/: README.md
Interoperable_Vector_in_Rust/interoperable_vector/: Cargo.toml
Interoperable_Vector_in_Rust/interoperable_vector/src/: lib.rs
Modern_OpenGL_in_D/: Makefile  dub.json
Multifile_Project_in_Rust/: Cargo.toml
PCG64S_in_Rust/: Cargo.toml
Random_Strings_in_Javascript/: README.md  random_strings.js
SHA-256_in_D/: sha256.d  sha256_v1.d  sha256_v2.d
SIMD_in_D/: simd.d
Starting_with_OpenGL_in_D/: Makefile  dub.json
src/: benchmark.d  demo.d  fractional_brownian_motion_demo.d  simplex_noise_demo.d  terrain_demo.d
(+64 files in other folders)
